--- a/_scripts/exact_pp_glm.ipynb
+++ b/_scripts/exact_pp_glm.ipynb
@@ -291,7 +291,7 @@
     "\\mathcal{L} = \\sum \\log(l(t_k)) - \\int_0^T \\log(l(t)) \\, dt = \\sum \\log(l(t_k)) - L(T)\n",
     "$$\n",
     "### Cumulative Intensity Function\n",
-    "If we have an identity link function and assume positive weights $\\mathbf{w} \\in \\mathbb{R}^{n+}$ for the basis, then the intensity function is\n",
+    "If we have an identity link function and assume positive weights $\\mathbf{w} \\in \\mathbb{R}^{n+1}$ satisfying the condition for non positve rates, for the basis plua intercept, then the intensity function is\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
