fixed condition on weights

--- a/_scripts/exact_pp_glm.ipynb
+++ b/_scripts/exact_pp_glm.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "891e7e18-3c78-4171-a12f-c388a99b41d2",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4b42f7ab-6f55-4f60-9248-788d8159ceda",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical check that cumulative intesity is correct: -9.166675835103888e-05\n"
+      "numerical check that cumulative intesity is correct: -9.1552734e-05\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "598dee2f-ca82-4f7d-8805-1ea9f173d726",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "(0.0, 55.0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "fea5771c-f588-4769-92cc-575d07c40fbc",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
     "pg = ProjectedGradient(fun=neg_log_likelihood, projection=projection.projection_box)\n",
     "pp_fit = pg.run(p0, (1E-6, jnp.inf), window_size=ws, post_synaptic=spike_times, tmax=T)\n",
     "\n",
-    "print(\"recovered params\", out[0])\n"
+    "print(\"recovered params\", pp_fit[0])\n"
    ]
   },
   {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "5fdead0b-8269-4968-b9c0-b45641225326",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
     "plt.title(\"compare predicted rate\")\n",
     "plt.plot(time, intensity(time, l0, ws), label=\"actual rate\")\n",
     "plt.plot(pred_rate, label=\"regular glm rate prediction\")\n",
-    "plt.plot(time, jit_parametric_intensity(time, out[0], ws), label=\"point-process GLM\")\n",
+    "plt.plot(time, jit_parametric_intensity(time, pp_fit[0], ws), label=\"point-process GLM\")\n",
     "plt.xlim(0, 50)\n",
     "plt.ylim(0, 2)\n",
     "plt.legend()\n",
@@ -281,7 +281,7 @@
     "\n",
     "- Identity link function.\n",
     "- Non-negative basis.\n",
-    "- Fit using projected gradient or other constrained optimization to ensure non-negative rate. If BSplines are used then, since $\\sum b_k(t) = 1$ for all $t$ in the domain of the basis, convolving the spike times with $f(t) = \\begin{cases} 1 && 0\\le t\\le\\Delta \\\\ 0 && \\text{otherwise}\\end{cases}$, and taking the max of the convolution with the spike times, i.e. $m = \\max_t f(t) * \\delta(t_j - t)$, than, for a positive rate it is sufficeint that: $m \\cdot \\sum_{i=1}^{n+1} w_i \\ge w_0$\n",
+    "- Fit using projected gradient or other constrained optimization to ensure non-negative rate. If BSplines are used then, since $\\sum b_k(t) = 1$ for all $t$ in the domain of the basis, convolving the spike times with $f(t) = \\begin{cases} 1 && 0\\le t\\le\\Delta \\\\ 0 && \\text{otherwise}\\end{cases}$, and taking the max of the convolution with the spike times, i.e. $m = \\max_t f(t) * \\delta(t_j - t)$, than, for a positive rate it is sufficeint that: $m \\cdot \\sum_{i=1}^{n+1} w_i < w_0$\n",
     "\n",
     "This construction can be easily generalized to N neurons, but let's start assuming a single pre-synaptic and post-synaptic neuron for simplicity.\n",
     "Let $\\Phi(t) = [b_1(t), ..., b_n(t)]$ a vector of $n$ basis fuctions such as $b_k(t) \\ge 0$. All the basis have support contained in $[0, \\Delta)$.\n",
