--- a/_scripts/exact_pp_glm.ipynb
+++ b/_scripts/exact_pp_glm.ipynb
@@ -281,7 +281,7 @@
     "\n",
     "- Identity link function.\n",
     "- Non-negative basis.\n",
-    "- Fit using projected gradient or other constrained optimization to ensure non-negative rate. If BSplines are used then, since $\\sum b_k(t) = 1$ for all $t$ in the domain of the basis, convolving the spike times with $f(t) = \\begin{cases} 1 && 0\\le t\\le\\Delta \\\\ 0 && \\text{otherwise}\\end{cases}$, and taking the max of the convolution with the spike times, i.e. $m = \\max_t f(t) * \\delta(t_j - t)$, than, for a positive rate it is sufficeint that: $m \\cdot \\sum_{i=1}^{n+1} w_i < w_0$\n",
+    "- Fit using projected gradient or other constrained optimization to ensure non-negative rate. If $n$ BSplines are used then we have $n+1$ weights $\\mathbf{w}$ includig the intercept. Since $\\sum b_k(t) = 1$ for all $t$ in the domain of the basis, convolving the spike times with $f(t) = \\begin{cases} 1 && 0\\le t\\le\\Delta \\\\ 0 && \\text{otherwise}\\end{cases}$, and taking the max of the convolution with the spike times, i.e. $m = \\max_t f(t) * \\delta(t_j - t)$, than, for a positive rate it is sufficeint that: $m \\cdot \\sum_{i=1}^{n+1} w_i < w_0$\n",
     "\n",
     "This construction can be easily generalized to N neurons, but let's start assuming a single pre-synaptic and post-synaptic neuron for simplicity.\n",
     "Let $\\Phi(t) = [b_1(t), ..., b_n(t)]$ a vector of $n$ basis fuctions such as $b_k(t) \\ge 0$. All the basis have support contained in $[0, \\Delta)$.\n",
